--- a/projeto-dropbox-curso-JS/app/views/index.ejs
+++ b/projeto-dropbox-curso-JS/app/views/index.ejs
@@ -372,5 +372,6 @@
     </div>
 
 </body>
-
+<script src="src/controller/DropBoxController.js"></script>
+<script src="src/index.js"></script>
 </html>
