W20 - Lendo capa de arquivo PDF e gerando imagem com PDF.js, Changed case to display preview of pdf

--- a/projeto-whatsapp-curso-JS/css/style.css
+++ b/projeto-whatsapp-curso-JS/css/style.css
@@ -16145,3 +16145,8 @@ html[dir=rtl] ._2ICcy:after{
     width: auto;
     text-align: center;
 }
+#img-panel-document-preview{
+    width: auto;
+    height: auto;
+    margin-top: 50%;
+}
