--- a/projeto-restaurante-curso-JS/saboroso/views/admin/reservations.ejs
+++ b/projeto-restaurante-curso-JS/saboroso/views/admin/reservations.ejs
@@ -230,17 +230,7 @@
 
   let grafico = new Chart(document.querySelector('#chart').getContext("2d"), {
     type:'line',
-    data:{
-      labels:['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun'],
-      datasets:[{
-        data:[2, 5, 6, 2, 5, 2],
-        label:'Reservas',
-        backgroundColor: 'rgb(54, 162, 235)',
-        borderColor: 'rgb(54, 162, 235)',
-        fill: true,
-        pointBackgroundColocar:'#FFF'
-      }]
-    },
+    data:{},
     options:{
       tooltips:{
         model:'index',
@@ -263,6 +253,26 @@
         }]
       }
     }
-  })
+  });
+
+  fetch(`/admin/reservations/chart${window.location.search}`)
+    .then(response => response.json())
+    .then(json => {
+      console.log(json);
+      grafico.data = {
+        labels: json.months,
+        datasets: [{
+          data: json.values,
+          label:'Reservas',
+          backgroundColor: 'rgb(54, 162, 235)',
+          borderColor: 'rgb(54, 162, 235)',
+          fill: true,
+          pointBackgroundColocar:'#FFF'
+        }]
+      };
+
+      grafico.update();
+
+    });
 
 </script>
